<resources>
    <string name="app_name">SpeakAme</string>
    <string name="signin">LOGIN</string>
    <string name="project_id">99211001429</string>
    <string name="register" translatable="false">REGISTER</string>
    <string name="helpful">Helpful Hints</string>
    <string name="title_activity_sign_in_">Login</string>
    <string name="title_activity_sign_up_">Register</string>
    <string name="title_activity_forgot__password">Verify</string>
    <string name="text_forgotscreen">We have sent your OTP</string>
    <string name="text_forgotscreensecond">You will recieve an text message containing</string>
    <string name="text_forgotscreenthird">your one time password.</string>
    <string name="text_recetepaas">Resend OTP</string>
    <string name="title_activity_main_screen">SpeakAme</string>
    <string name="title_activity_addnewcontact_activity">Add New Contact</string>
    <string name="title_activity_refer_friend_">Refer a Friend</string>
    <string name="title_activity_referfrnd_activity">Refer a Friend</string>
    <string name="title_activity_two_tab_">Speakame</string>
    <string name="title_activity_privacy_">Privacy</string>
    <string name="title_activity_help_feedback_">Help &amp; feedback</string>
    <string name="title_activity_account_">Account</string>
    <string name="title_activity_attach"></string>
    <string name="title_activity_edit_status">EditStatusActivity</string>
    <string name="title_activity_chat"></string>
    <string name="title_activity_contact_display">ContactDisplayActivity</string>
    <string name="title_activity_create_group_chat">CreateGroupChatActivity</string>
    <string name="title_activity_social_contact">SocialContactActivity</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_delete_account_">Delete my account</string>
    <string name="title_activity_change_number_">Change Number</string>
    <string name="title_activity_payment_info_">Payment Info</string>
    <string name="title_activity_notification_">Notifications</string>
    <string name="title_activity_contactus_">Contact us</string>
    <string name="title_activity_add_new_card_">Add New Credit Card</string>
    <string name="title_activity_chat_list_">"Chat"</string>
    <string name="title_activity_view_contact__detail">Detail Contact</string>
    <string name="title_activity_calling_">User name</string>
    <string name="title_activity_favoirite_">Favourites</string>
    <string name="title_activity_languagelearn_activity">Language Learning</string>
    <string name="title_activity_group_chat_">Group Title</string>
    <string name="title_activity_edit_profile_">Edit Profile</string>
    <string name="title_activity_contact_list_">Add Contacts</string>
    <string name="title_activity_demo">Demo</string>
    <string name="title_activity_view_group_detail_">Group Title</string>
    <string name="title_activity_demo_two">DemoTwoActivity</string>
    <string name="title_activity_edit_card_detail_">Edit New Credit Card</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_required_length">Mobile number is invalid</string>
    <string name="error_field_password_lenght">Password length should be Minimum 6 digit</string>
    <string name="error_dont_match_password">Password does not match</string>
    <string name="prompt_log_out">You want to Log off from the application?</string>
    <string name="alert">Alert !</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_contact_import_">Contact</string>
    <string name="server">ip-172-31-30-231</string>
    <string name="serverandresorces">\@ip-172-31-30-231/Smack</string>
    <string name="facebook_app_id">190401661364045</string>
    <string name="msg_notify">Yo have received a new notification</string>
    <string name="title_activity_send_image">Send photo</string>
    <string name="connection_error">Connection has been dropped</string>
    <string name="alert_number">The phone number you entered doesnt match your accounts</string>
    <string name="ok">Ok</string>
    <string name="title_activity_confirm_delet__account">Delete my account</string>
    <string-array name="reason">
        <item>I am changing my device</item>
        <item>i am changing my phone number</item>
        <item>I am changing my account temporarily</item>
        <item>Some missing feature</item>
        <item>Not working properly</item>
    </string-array>
    <string name="title_activity_media">MediaActivity</string>
    <string name="title_activity_forgot_paasword">Forgot Password</string>
    <string name="title_activity_chat_setting">Chat</string>
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>
    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>
    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>
    <string name="date_util_suffix">ago</string>
    <string name="button_description">Emoticons Button</string>
    <string name="post">Post</string>
    <string name="back">Back</string>
    <string name="selected_count">%1$s selected</string>
    <string name="title_activity_forward">Forward To...</string>
    <string name="title_activity_alert_speakame">Speakame</string>
    <string name="privacy_string">If you dont share your Last Seen, you\nwon\'t be able to see other people\'s Last\nSeen</string>
    <string name="title_activity_country_list">CountryListActivity</string>
    <string name="title_activity_alert_days_speakame">Remaining Days</string>
    <string name="title_activity_instruction_change_number">Change Number</string>
    <string name="title_activity_edit_name">EditNameActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_error_incorrect_phone">Incorrect phone</string>
    <string name="string_free_user">As a thank you for being one of the early adaptors SpeakAme would like to make you a Free for life user! All you would need to do is to keep the same phone number and you are Free for the LIFE of the account!" If you choose to delete your account you may forfeit your free for life status.</string>
    <string name="title_activity_chat1">" "</string>
    <string name="album_view">Select photo album</string>
    <string name="image_view">Tap to select images</string>
    <string name="add">ADD</string>
    <string name="selected">selected</string>
    <string name="limit_exceeded">Can select a maximum of %d images</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="permission_info">App requires permission to Storage to view images.</string>
    <string name="permission_force">App requires permission to Storage to view images. Tap Settings and go to Permissions to grant permission.</string>
    <string name="permission_ok">OK</string>
    <string name="permission_settings">Settings</string>
    <string name="permission_package">package</string>
</resources>