<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_confirm_login_otp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.speakame.Activity.ConfirmLoginOtp"
    tools:showIn="@layout/activity_confirm_login_otp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:gravity="center"
            android:text="@string/text_forgotscreen"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#363636" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_forgotscreensecond"
            android:textColor="#838383"
            android:textSize="@dimen/content_text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/text_forgotscreenthird"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#838383"
            android:textSize="@dimen/content_text" />

        <EditText
            android:id="@+id/veryfyotpedittext"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/editbg"
            android:gravity="center"
            android:inputType="number"
            android:hint="Enter Otp"
            android:textColor="@color/inputeditcolor"
            android:textSize="@dimen/title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center|right"
            android:orientation="vertical">

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                app:mrl_rippleBackground="@color/colorPrimary"
                app:mrl_rippleColor="@color/colorwhite">


                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="Submit"
                    android:textColor="@color/colorwhite"
                    android:textStyle="bold" />
            </com.balysv.materialripple.MaterialRippleLayout>

            <TextView
                android:id="@+id/txtresend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_recetepaas"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/content_text"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
